--- a/游戏圈达人榜/css/style.css
+++ b/游戏圈达人榜/css/style.css
@@ -46,7 +46,8 @@ a{-webkit-user-select:none;-webkit-user-drag:none;-webkit-tap-highlight-color:rg
 .m_user .watch {}
 .m_user .name { line-height:1.1rem; font-size:0.7rem; }
 .m_user .name i { display:inline-block; width:0.55rem; height:0.6rem; margin-left:0.3rem; background:url(../images/sprites.png) no-repeat; background-position:0 -2.325rem;  background-size:7rem 28rem; }
-.m_user .name a { font-size:0.5rem; text-decoration:underline; margin-right:0.5rem; color:#fff; }
+.m_user .name a { font-size:0.5rem; margin-right:0.5rem; color:#fff; }
+.m_user .name .active { color:#fff; text-decoration:underline; }
 .m_user .tipc { line-height:1.4rem; font-size:0.5rem; }
 .m_user .num { font-size:0.5rem; }
 .m_enbtn { text-align:center; padding-top:0.4rem; }
@@ -58,7 +59,7 @@ a{-webkit-user-select:none;-webkit-user-drag:none;-webkit-tap-highlight-color:rg
 .m_btn a:nth-of-type(1) { background-position:0 -14.55rem; }
 .m_btn a:nth-of-type(2) { background-position:0 -17.56rem; }
 .m_main  h2 { height:2.6rem; line-height:2.6rem; text-align:center; font-size:1rem; color:#eb493d; }
-.m_main { position:relative; z-index:3;  }
+.m_main { position:relative; z-index:3; }
 .m_box { padding:9.95rem 0.6rem 0; }
 .m_tipsNum { height:2.4rem; line-height:2.4rem; text-align:center; font-size:0.8rem; color:#fff;  }
 .m_tipsNum strong { font-size:0.9rem; color:#eb493d; margin:0 0.2rem; }
@@ -69,7 +70,7 @@ a{-webkit-user-select:none;-webkit-user-drag:none;-webkit-tap-highlight-color:rg
 .m_info .num span { color:#e14993; }
 .m_info .view { color:#fff; }
 .m_info .num { color:#fff600; }
-.m_list li { margin-bottom:0.4rem; background:#fffbdf;  }
+.m_list li { margin-bottom:0.4rem; background:#fffbdf; overflow:hidden;  }
 .m_list li:nth-last-of-type(1) { margin-bottom:0; }
 .m_list li .rank strong { color:#d2601a; }
 .m_list li .view .name { color:#2f2725; }
@@ -99,6 +100,7 @@ a{-webkit-user-select:none;-webkit-user-drag:none;-webkit-tap-highlight-color:rg
 .m_list .l_third .view .name,.m_list .l_third .view .tipc { color:#fff; }
 .m_list .l_third .view .num { color:#fff600; }
 .m_list .name a { color:#ababab; }
+.m_list .name .active { color:#525252; text-decoration:underline; }
 .l_first .rank strong { background:url(../images/sprites.png) no-repeat;  background-size:7rem 28rem; background-position:0 -8.1rem; }
 .l_second .rank strong { background:url(../images/sprites.png) no-repeat;  background-size:7rem 28rem; background-position:0 -10.25rem; }
 .l_third .rank strong { background:url(../images/sprites.png) no-repeat;  background-size:7rem 28rem; background-position:0 -12.4rem; }
@@ -141,8 +143,7 @@ a{-webkit-user-select:none;-webkit-user-drag:none;-webkit-tap-highlight-color:rg
 .r_table table { width:100%; background:#5f30b8; }
 .r_table th { font-size:0.55rem; color:#9f6ef5; border:solid 0.05rem #7241c9; line-height:1.225rem; height:1.225rem; margin-bottom:0.15rem; }
 .r_table td { line-height:0.8rem; text-align:center; color:#fff; font-size:0.5rem; border:solid 0.05rem #7241c9; border-bottom:none; border-top:none; }
-.r_btnbox { padding:1.6rem 0 1.5rem; text-align:center; }
-.r_btnbox a { display:inline-block; width:14.175rem; height:2.35rem; background:url(../images/sprites_3.png) no-repeat; background-size:14.5rem 10rem; background-position:0 -7.5rem; }
+.r_btnbox { display:block; margin:1.6rem auto 0; padding-bottom:1.5rem; overflow:hidden; text-indent:-9999rem; width:14.175rem; height:2.35rem; background:url(../images/sprites_3.png) no-repeat; background-size:14.5rem 10rem; background-position:0 -7.5rem; }
 .m_backtop { position:fixed; right:0; bottom:8rem; width:2.875rem; height:3.025rem; background:url(../images/sprites.png) no-repeat;  background-size:7rem 28rem; background-position:0 -21.8rem; }
 .m_backtop a { position:absolute; right:0.9rem; bottom:-0.1rem; width:1.1rem; height:2.475rem; background:url(../images/sprites.png) no-repeat;  background-size:7rem 28rem; background-position:0 -25.5rem; }
 .e_btndown { display:block; margin:2.35rem auto 0; width:14.175rem; height:2.35rem; background:url(../images/sprites_2.png) no-repeat; background-size:14.5rem 7rem; background-position:0 0; }
